// Copyright 2022 PingCAP, Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.#pragma once

syntax = "proto3";

package DB.PS.V3.Remote;

import "common.proto";

// This prefix is only for debugging purpose.
message DataFilePrefix {
    uint64 local_sequence = 1;

    // The local timestamp this data file is created.
    uint64 create_at_ms = 2;
    WriterInfo writer_info = 3;

    // The first Checkpoint Manifest File ID that contains this data file.
    // The referred manifest file has identical `local_sequence` and `writer_info` apparently.
    string manifest_file_id = 4;

    // When data file is too large, one data file will be separated into multiples.
    // This records which one it is.
    uint32 sub_file_index = 5;
}

// This suffix is only for debugging purpose.
message DataFileSuffix {
    // Records contained in this data file.
    repeated EntryEditRecord records = 1;
}

message EntryEditRecord {
    PageId page_id = 1;
    uint64 version_sequence = 2;
    uint64 version_epoch = 3;

    uint64 offset_in_file = 4;
    uint64 size_in_file = 5;
}
